--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ qt_add_qml_module(appCuteSockets
     SOURCES Controllers/appmanager.h Controllers/appmanager.cpp
     SOURCES Controllers/tcpserver.h Controllers/tcpserver.cpp
     SOURCES Controllers/tcpclient.h Controllers/tcpclient.cpp
+    SOURCES Controllers/udpserver.h Controllers/udpserver.cpp
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
